--- a/src/style.css
+++ b/src/style.css
@@ -8,8 +8,17 @@
 
 }
 
+body {
+    /* display: grid; */
+    background: 333;
+    min-height: 100vh;
+    background-size: cover;
+    font-size: 100%;
+    background: linear-gradient(70deg, #2F2325 16.60%, #be786b 85%);
+}
 
 .header {
+    background-color: #233;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -18,37 +27,21 @@
 
 }
 
-.headerImage {
+.header-image {
     width: 100px;
     height:72px;
     border-radius: 50px;
 }
 
-.headerMenu {
+.header-menu {
     display: flex;
-    gap: 30px;
+    gap: 40px;
 }
 
-body {
-    padding: 0;
-    background: 333;
-    min-height: 100vh;
-    background-size: cover;
-    font-size: 100%;
-    background: linear-gradient(70deg, #2F2325 16.60%, #8E5D52 85%);
-}
-
-.video-player {
-    max-width: 750px;
-    position: relative;
-    overflow: hidden;
-}
-
-.headerMenuItem {
+.header-menu-item {
     font-family: 'Roboto', sans-serif;
     color: #fff2e7;
-    font-weight: 400;
-    font-size: 18px;
+    font-size: 20px;
 }
 
 .content {
@@ -56,34 +49,39 @@ body {
     border-top: 0.4px solid #FFF2E7;
 }
 
-.mainContent {
+.main-content {
+    padding: 10px;
     display: flex;
+    gap: 20px;
     flex-direction: row;
     align-items: center;
     justify-content: space-around;
 }
 
-.mainCopntentWrited {
+.main-content-writed {
+    padding-right: 5px;
+    text-align: justify;
+    width: 50%;
     display: flex;
     flex-direction: column;
     gap: 32px;
 }
 
-.mainCopntentWritedTitle {
+.main-content-writed-title {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
-    font-size: 64px;
+    font-size: 50px;
     color: #FFF2E7;
 }
 
-.mainCopntentWritedSubtitle {
+.main-content-writed-subtitle {
     font-family: 'Raleway', sans-serif;
     font-weight: 400;
     font-size: 24px;
     color: #ECD6C4;
 }
 
-.mainCopntentButton {
+.main-content-button {
     background-color: #ECD6C4;
     width: 185px;
     height: 87px;
@@ -96,11 +94,16 @@ body {
     color: #2F2325;
 }
 
-.mainCopntentButton:hover {
+.git-button {
+    color: black;
+}
+
+.main-content-button:hover {
     background-color: rgba(235, 213, 195, 0.52)
 }
 
-.secondaryContent {
+.secondary-content {
+    padding: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -108,7 +111,7 @@ body {
     margin-top: 50px;
 }
 
-.secondaryContentTitle {
+.secondary-content-title {
     border-top: 0.4px solid #FFF2E7;
     padding-top: 48px;
     font-family: 'Raleway', sans-serif;
@@ -118,7 +121,7 @@ body {
     margin-bottom: 15px;
 }
 
-.secondaryContentTitleParagraph {
+.secondary-content-title-paragraph {
     font-family: 'Raleway', sans-serif;
     font-weight: 300;
     font-size: 18px;
@@ -126,11 +129,12 @@ body {
 }
 
 .footer {
+    background-color: #333;
     border-top: 0.4px solid #FFF2E7;
     padding: 32px;
 }
 
-.footerImage {
+.footer-image {
     width: 100px;
     height:72px;
     border-radius: 50px;
@@ -138,51 +142,77 @@ body {
     margin: 0 auto;
 }
 
+.video-player {
+    padding-top: 50px;
+    border-radius: 2px;
+    max-width: 700px;
+    position: relative;
+    overflow: hidden;
+}
+
 .video {
+    border-radius: 5px;
     padding-top: 50px;
     width: 100%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .player-controls {
     display: flex;
     position: absolute;
-    bottom: 0;
     width: 100%;
-    transform: translateY(100%) translateY(-5px);
+    transform: translateY(100%) translateY(-10px);
     transition: 0.3s;
     flex-wrap: wrap;
     align-items: center;
+    bottom: 0vh;
+}
 
+.progress-bar {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 6px;
+    transition: 0.3s;
+    cursor: pointer;
+    bottom: 0;
+}
+
+.video-player:hover .progress-bar {
+    bottom: 0;
 }
 
 .inner-player-controls {
     width: 100%;
-    display: flex;
-    flex-direction: row;
+    height: 5vh;
+    /* display: flex; */
+    display: grid;
+    grid-template-columns: 10% 12% 22% 1fr;
+    grid-template-rows: 1f;
+    /* flex-direction: row; */
     align-items: center;
+    /* justify-content: space-between;  */
 } 
 
 .video-player:hover .player-controls {
-    transform: translateY(0);
+    transform: translateY(-5px);
     background: rgba(0, 0, 0, 0.6);
 }
 
 .play-button {
-    width: 8%;
+    order: 1;
+    /* width: 10%; */
     border: none;
     background: transparent;
     color: white;
     padding: 10px;
-    margin-top: 1px;
 }
 
 .mute {
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    width: 5%;
-    margin-right: 10px;
+    padding: 5px;
+    /* position: fixed; */
+    /* width: 10%; */
+    /* margin-right: 50px; */
 }
 
 .mute.muted {
@@ -190,7 +220,7 @@ body {
 }
 
 .mute .slash {
-    position: absolute;
+    /* position: fixed; */
     width: 2px;
     height: 150%;
     background: white;
@@ -202,24 +232,26 @@ body {
     display: block;
 }
 
-.hoverableVolume {
+.hoverable-volume {
+    order: 4;
+    /* width: 20%; */
     display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 20%;
+    /* justify-content: center;
+    align-items: center; */
 }
 
 
 .hoverable-volume > input[type="range"] {
+    position: relative;
     -webkit-appearance: none;
     background: transparent;
-    margin: 0;
-    align-items: center;
-    justify-content: right;
+    /* margin: 0; */
+    /* margin-left: 110px;
+    margin-top: -2px; */
 }
 
 .hoverable-volume > input[type="range"]::-webkit-slider-runnable-track {
-    width: 100%;
+    /* width: 100%; */
     height: 10px;
     cursor: pointer;    
     background: linear-gradient(to right, white, rgb(235, 108, 108));
@@ -236,31 +268,31 @@ body {
 }
 
 .fullscreen {
-    position: fixed;
-    margin-left: 640px;;
+    background-color: #fff;
+    /* flex-grow: 11; */
+    order: 6;
+    /* width: 10%; */
+    /* position: fixed; */
+    /* margin-left: 640px;;
     margin-right: 10px;
-    margin-top: 1px;
+    margin-top: 1px; */
+    justify-self: end;
+    padding: 5px 20px;
 }
 
 .time {
-    margin-left: auto;
-    margin-right: 10px;
+    order: 2;
+    /* width: 12%; */
+    /* margin-left: auto; */
+    /* margin-right: 10px; */
     font-size: 1em;
     color: white;
     font-family: Roboto, "Helvetica Neue";
 }
 
-.progress-bar {
-    position: relative;
-    display: flex;
-    width: 100%;
-    height: 6px;
-    transition: 0.3s;
-    cursor: pointer;
-}
-
 .progress {
     width: 0;
+    border-radius: 5px;
     background: #9009;  
 }
 
@@ -276,4 +308,45 @@ body {
 
 .hide {
     display: none;
+}
+
+@media (max-width: 767px) {
+    .header-image {
+        display: none;
+    }
+
+    .main-content {
+        flex-direction: column;
+    }
+
+    .main-content-writed {
+        width: 80%;
+    }
+
+    .main-content-writed-title {
+        font-size: 40px;
+    }
+
+    .player-controls {
+        transform: translateY(100%) translateY(-10px);
+        font-size: 12px;
+        width: 100%;
+    }
+    
+    .inner-player-controls {
+        grid-template-columns: 13% 18% 40% 1fr;
+        /* height: 10px; */
+        height: 100%;
+    }
+
+    .video-player:hover .player-controls {
+        transform: translateY(0);
+        background: rgba(0, 0, 0, 0.6);
+        bottom: 0vh;
+        height: 6vh;
+    }
+
+    /* .player-controls:hover .player-controls {
+    transform: translateY(100%) translateY(0);   
+    } */
 }
